[gd_scene load_steps=2 format=3 uid="uid://dwqrjmlcj7uf6"]

[ext_resource type="Script" path="res://scripts/start.gd" id="1_8q7ag"]

[node name="Start" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8q7ag")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -97.5
offset_top = -101.0
offset_right = 97.5
grow_horizontal = 2
grow_vertical = 0
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="start_button" type="Button" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
text = "Start"

[node name="options_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="exit_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="VBoxContainer/start_button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/options_button" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/exit_button" to="." method="_on_exit_button_pressed"]
